added option selection for packet format